fixed error handling not covering up createCharacter form and updateCharacter form

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -217,9 +217,8 @@ nav {
     align-content: center;
     justify-content: center;
     background-color: #0000001a;
-    height: 90vh;
+    height: 100%;
     width: 100%;
-    margin-top: 25%;
 } 
 
 .form-elementInfo{
